# etsi_its_messages

./: .gitignore  .gitlab-ci.code-generation.yml  .gitlab-ci.codegen.yml  .gitlab-ci.generate-msgs.yml  .gitlab-ci.yml  .gitmodules  .repos  CITATION.cff  DRIVERS.md  LICENSE  README.md  TODO.md  annotated.html  annotated_dup.js  asn1__primitives__getters_8h_source.html  asn1__primitives__setters_8h_source.html  cam__access_8h.html  cam__access_8h.js  cam__access_8h_source.html  cam__access_8hpp.html  cam__access_8hpp_source.html  cam__getters_8h.html  cam__getters_8h.js  cam__getters_8h_source.html  cam__getters__common_8h.html  cam__getters__common_8h.js  cam__getters__common_8h_source.html  cam__setters_8h.html  cam__setters_8h.js  cam__setters_8h_source.html  cam__setters__common_8h.html  cam__setters__common_8h.js  cam__setters__common_8h_source.html  cam__ts__access_8h.html  cam__ts__access_8h.js  cam__ts__access_8h_source.html  cam__ts__access_8hpp.html  cam__ts__access_8hpp_source.html  cam__ts__getters_8h.html  cam__ts__getters_8h.js  (+218 more)
etsi_its_coding/etsi_its_coding/: CHANGELOG.rst  CMakeLists.txt  package.xml
etsi_its_coding/etsi_its_denm_coding/: CHANGELOG.rst  CMakeLists.txt  package.xml
etsi_its_coding/etsi_its_denm_coding/src/: ANY.c  ANY_aper.c  ANY_ber.c  ANY_jer.c  ANY_uper.c  ANY_xer.c  AccelerationConfidence.c  AccelerationControl.c  AccidentSubCauseCode.c  ActionID.c  AdverseWeatherCondition-AdhesionSubCauseCode.c  AdverseWeatherCondition-ExtremeWeatherConditionSubCauseCode.c  AdverseWeatherCondition-PrecipitationSubCauseCode.c  AdverseWeatherCondition-VisibilitySubCauseCode.c  AlacarteContainer.c  Altitude.c  AltitudeConfidence.c  AltitudeValue.c  BIT_STRING.c  BIT_STRING_jer.c  BIT_STRING_oer.c  BIT_STRING_print.c  BIT_STRING_rfill.c  BIT_STRING_uper.c  BIT_STRING_xer.c  BOOLEAN.c  BOOLEAN_aper.c  BOOLEAN_ber.c  BOOLEAN_jer.c  BOOLEAN_oer.c  BOOLEAN_print.c  BOOLEAN_rfill.c  BOOLEAN_uper.c  BOOLEAN_xer.c  CauseCode.c  CauseCodeType.c  CenDsrcTollingZone.c  CenDsrcTollingZoneID.c  ClosedLanes.c  CollisionRiskSubCauseCode.c  (+402 more)
etsi_its_coding/etsi_its_denm_ts_coding/: CHANGELOG.rst  CMakeLists.txt  package.xml
etsi_its_coding/etsi_its_denm_ts_coding/src/: ANY.c  ANY_aper.c  ANY_jer.c  ANY_uper.c  BIT_STRING.c  BIT_STRING_jer.c  BIT_STRING_print.c  BIT_STRING_rfill.c  BIT_STRING_uper.c  BOOLEAN.c  BOOLEAN_aper.c  BOOLEAN_jer.c  BOOLEAN_print.c  BOOLEAN_rfill.c  BOOLEAN_uper.c  ENUMERATED.c  ENUMERATED_aper.c  ENUMERATED_jer.c  ENUMERATED_uper.c  GraphicString.c  IA5String.c  INTEGER.c  INTEGER_aper.c  INTEGER_jer.c  INTEGER_print.c  INTEGER_rfill.c  INTEGER_uper.c  NULL.c  NULL_aper.c  NULL_jer.c  NULL_print.c  NULL_rfill.c  NULL_uper.c  NativeEnumerated.c  NativeEnumerated_aper.c  NativeEnumerated_jer.c  NativeEnumerated_uper.c  NativeInteger.c  NativeInteger_aper.c  NativeInteger_jer.c  (+422 more)
etsi_its_conversion/etsi_its_cam_conversion/: CHANGELOG.rst  CMakeLists.txt  package.xml
etsi_its_conversion/etsi_its_cam_conversion/include/: convertAccelerationConfidence.h  convertAccelerationControl.h  convertAltitudeConfidence.h  convertAltitudeValue.h  convertBasicVehicleContainerHighFrequency.h  convertBasicVehicleContainerLowFrequency.h  convertCamParameters.h  convertCauseCodeType.h  convertCenDsrcTollingZone.h  convertCenDsrcTollingZoneID.h  convertClosedLanes.h  convertCoopAwareness.h  convertCurvature.h  convertCurvatureCalculationMode.h  convertCurvatureConfidence.h  convertCurvatureValue.h  convertDangerousGoodsContainer.h  convertDeltaAltitude.h  convertDeltaLatitude.h  convertDeltaLongitude.h  convertDeltaReferencePosition.h  convertDriveDirection.h  convertDrivingLaneStatus.h  convertEmbarkationStatus.h  convertEmergencyContainer.h  convertEmergencyPriority.h  convertExteriorLights.h  convertGenerationDeltaTime.h  convertHardShoulderStatus.h  convertHeadingConfidence.h  convertHeadingValue.h  (+42 more)
etsi_its_conversion/etsi_its_cam_ts_conversion/: CHANGELOG.rst  CMakeLists.txt  package.xml
etsi_its_conversion/etsi_its_conversion/: CHANGELOG.rst  CMakeLists.txt  nodelet_plugins.xml  package.xml
etsi_its_conversion/etsi_its_conversion_srvs/: CHANGELOG.rst  CMakeLists.txt  package.xml
etsi_its_conversion/etsi_its_denm_conversion/: CHANGELOG.rst  CMakeLists.txt  package.xml
etsi_its_conversion/etsi_its_denm_ts_conversion/: CHANGELOG.rst  CMakeLists.txt  package.xml
etsi_its_conversion/etsi_its_ivim_ts_conversion/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
etsi_its_conversion/etsi_its_mcm_uulm_conversion/: CHANGELOG.rst  CMakeLists.txt  package.xml
etsi_its_conversion/etsi_its_primitives_conversion/: CHANGELOG.rst  CMakeLists.txt  package.xml
etsi_its_conversion/etsi_its_vam_ts_conversion/: CHANGELOG.rst  CMakeLists.txt  package.xml
etsi_its_mapem_msgs/: CMakeLists.txt  package.xml
etsi_its_messages/: CHANGELOG.rst  CMakeLists.txt  package.xml
etsi_its_msgs/etsi_its_cam_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
etsi_its_msgs_utils/: CHANGELOG.rst  CMakeLists.txt  package.xml
etsi_its_msgs_utils/samples/: README.md  publish_cam.py  publish_cam_ts.py  publish_cpm_ts.py  publish_cpm_ts_multi_wrapped_container.py  publish_cpm_ts_sensor_information.py  publish_denm.py  publish_denm_ts.py  publish_ivim_ts.py  publish_mapem_ts.py  publish_spatem_ts.py  publish_vam_ts.py  utils.py
etsi_its_msgs_utils/test/: test_access.cpp  test_access.ros2.cpp  test_cam_access.cpp  test_cam_access.ros2.cpp  test_cam_ts_access.ros2.cpp  test_cpm_ts_access.ros2.cpp  test_denm_access.cpp  test_denm_access.ros2.cpp  test_mapem_access.cpp  test_mapem_access.ros2.cpp
etsi_its_rviz_plugins/: CHANGELOG.rst  CMakeLists.txt  etsi_its_rviz_plugins-extras.cmake  package.xml  plugins_description.xml
etsi_its_rviz_plugins/config/: a44.rviz  demo.rviz
etsi_its_rviz_plugins/launch/: a44.launch.py  demo.launch.py
etsi_its_rviz_plugins/urdf/: a44.urdf.xml
executor_demo/: CMakeLists.txt  package.xml
executor_demo/launch/: multi_threaded.launch.py  single_threaded.launch.py  static_single_threaded.launch.py
executor_demo/src/: callback_group_demo.cpp
(+21418 files in other folders)
