<?xml version="1.0"?>
<package format="3">
  <name>etsi_its_messages</name>
  <version>1.0.0</version>
  <description>Full ROS support for ETSI ITS Messages</description>

  <maintainer email="lennart.reiher@rwth-aachen.de">Lennart Reiher</maintainer>

  <license>TODO</license>

  <author email="lennart.reiher@rwth-aachen.de">Lennart Reiher</author>

  <depend>ros_environment</depend>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

  <exec_depend>etsi_its_coding</exec_depend>
  <exec_depend>etsi_its_msgs</exec_depend>

  <export>
    <metapackage condition="$ROS_VERSION == 1"/>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
