<?xml version="1.0"?>
<package format="3">

  <name>etsi_its_messages</name>
  <version>3.2.1</version>
  <description>ROS support for ETSI ITS messages</description>

  <maintainer email="jean-pierre.busch@rwth-aachen.de">Jean-Pierre Busch</maintainer>
  <maintainer email="guido.kueppers@rwth-aachen.de">Guido Küppers</maintainer>
  <maintainer email="lennart.reiher@rwth-aachen.de">Lennart Reiher</maintainer>

  <author email="jean-pierre.busch@rwth-aachen.de">Jean-Pierre Busch</author>
  <author email="guido.kueppers@rwth-aachen.de">Guido Küppers</author>
  <author email="lennart.reiher@rwth-aachen.de">Lennart Reiher</author>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>etsi_its_coding</exec_depend>
  <exec_depend>etsi_its_conversion</exec_depend>
  <exec_depend>etsi_its_msgs</exec_depend>
  <exec_depend>etsi_its_msgs_utils</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
